# fiber

./: Cargo.toml  LICENSE.md  README.md  THIRD_PARTY_LICENSES.txt  configure
libs/: libharfbuzz.0.dylib  libicuuc.77.dylib  libpng16.16.dylib
src/: main.rs
ui/: main.slint
